--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@
 body {
   margin: 0 12px;
   padding: 0;
-  max-height: 100vh;
+}
+
+*::-webkit-scrollbar{
+  display: none!important;
 }
 
 *{
@@ -63,15 +66,6 @@ span{
   margin-top:4px;
   font-size: 12px;
   text-align: center;
-}
-
-.following-section{
-  height: calc(100vh - 292px);
-  overflow-y: scroll;
-}
-
-.following-section::-webkit-scrollbar{
-  display: none!important;
 }
 
 .following-container{
